Closed Bug 335986 Opened 19 years ago Closed 18 years ago

[l10n] History "Last Visit" and "First Visit" column date strings don't appear to localize

Categories

(Camino Graveyard :: General, defect)

PowerPC
macOS
defect
Not set
normal

Tracking

(Not tracked)

RESOLVED FIXED
Camino1.6

People

(Reporter: alqahira, Assigned: stuart.morgan+bugzilla)

References

Details

(Keywords: fixed1.8.1.5)

Attachments

(2 files, 1 obsolete file)

There's currently a localized.string (bug 299757) that we use to control the Go menu date format in Camino (because we don't want the year in the Go menu, just Day of Week, Day, and Month). Cookies are using some wacky format (bug 335985). However, the History view's "Last Visit" and "First Visit" column *dates* don't appear to be localizable at all ("Yesterday" and "Today" are, since they're separate localizable.strings also used in the Go menu), according to bug 244328 comment 9. We should either 1) fully use the "shortened" (middle) format from the System Prefs for dates other than Yesterday/Today--but this doesn't let us use the Day of the Week, which we're using on "recent" dates (last week/168 hours?), e.g., "Sun Apr 23, 2006 05:14 PM"--or 2) create a new localizable.string (or strings) for these dates until we can get suitable info from the OS to match with the kind of string we want to show (bug 244328?); we don't want to overload the Go menu string since the formats here are different.
Option 1 seems reasonable. Just a short date with hour should be ok and readable at a glance. Moreover, for the last visit, we already have the day of the week mentioned in the folders grouping the history items by day.
Keywords: intl
Target Milestone: Camino1.1 → Camino1.2
Taking; I'll see if I can fix this the way I'm doing the cookies.
Assignee: nobody → stuart.morgan
Attached patch fix (obsolete) — Splinter Review
This fixes the formatting using CFDateFormatters to respect date and time locale formats, but keeps the same logic that the current history uses for what to show. The only non-localizable assumption I'm making here is that prepending a shortened weekday name to a date string will always be at least reasonable in any language; if it turns out to be a serious issue we can make that localizable.
Attachment #264631 - Flags: review?
Comment on attachment 264631 [details] [diff] [review] fix I can't expand History folders with dates older than Today with this patch, and console spews 2007-05-13 00:18:42.695 Camino[3898] *** -[NSDateFormatter stringFromDate:]: selector not recognized when I try.
Attached patch v2Splinter Review
Whoops, I didn't notice that that convenience method was 10.4+. This should be better.
Attachment #264631 - Attachment is obsolete: true
Attachment #264638 - Flags: review?
Attachment #264631 - Flags: review?
Attachment #264638 - Flags: review? → review+
Comment on attachment 264638 [details] [diff] [review] v2 For posterity (and in case pink has the same question Josh did) the reason this is moving out of the category is that it requires the CFDateFormatter, and I can't add persistent state in a category, and didn't want to regenerate the formatter over and over again when the only client is using it as a formatter anyway.
Attachment #264638 - Flags: superreview?(mikepinkerton)
Attachment #264638 - Flags: superreview?(mikepinkerton) → superreview+
Landed on trunk and MOZILLA_1_8_BRANCH
Status: NEW → RESOLVED
Closed: 18 years ago
Keywords: intlfixed1.8.1.5
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: