Camino only - Bug 335986: Honor locale settings in relative dates in history. r=josh sr=pink