camino/src/history/HistoryDataSource.mm
@@ -39,7 +39,6 @@
 
 #import "NSString+Utils.h"
 #import "NSPasteboard+Utils.h"
-#import "NSDate+Utils.h"
 
 #import "BrowserWindowController.h"
 #import "HistoryDataSource.h"
@@ -161,7 +160,6 @@ static int HistoryItemSort(id firstItem, id secondItem, void* context)
 
 - (NSArray*)historyItems;
 - (HistorySiteItem*)itemWithIdentifier:(NSString*)identifier;
-- (NSString*)relativeDataStringForDate:(NSDate*)date;
 
 - (void)siteIconLoaded:(NSNotification*)inNotification;
 - (void)checkForNewDay;
@@ -973,12 +971,6 @@ NS_IMPL_ISUPPORTS1(nsHistoryObserver, nsIHistoryObserver);
   return [mHistoryItemsDictionary objectForKey:identifier];
 }
 
-- (NSString*)relativeDataStringForDate:(NSDate*)date
-{
-  NSCalendarDate* calendarDate = [date dateWithCalendarFormat:nil timeZone:nil];
-  return [calendarDate relativeDateDescription];
-}
-
 - (void)siteIconLoaded:(NSNotification*)inNotification
 {
   HistoryItem* theItem = [inNotification object];
@@ -1116,10 +1108,10 @@ NS_IMPL_ISUPPORTS1(nsHistoryObserver, nsIHistoryObserver);
       return [item url];
 
     if ([[aTableColumn identifier] isEqualToString:@"last_visit"])
-      return [self relativeDataStringForDate:[item lastVisit]];
+      return [item lastVisit];
 
     if ([[aTableColumn identifier] isEqualToString:@"first_visit"])
-      return [self relativeDataStringForDate:[item firstVisit]];
+      return [item firstVisit];
   }
 
   if ([item isKindOfClass:[HistoryCategoryItem class]])
@@ -1128,7 +1120,7 @@ NS_IMPL_ISUPPORTS1(nsHistoryObserver, nsIHistoryObserver);
       return [BookmarkViewController greyStringWithItemCount:[item numberOfChildren]];
   }
   
-  return @"";
+  return nil;
 
 // TODO truncate string
 //  - (void)truncateToWidth:(float)maxWidth at:kTruncateAtMiddle withAttributes:(NSDictionary *)attributes
